2013-01-05 Simon Flöry <simon.floery@rechenraum.com>
	* applied patch by John Williams to support libquadmath (quad-precision
		floating point and up to 112-bit integer arithmetic)
		
2013-01-02 Simon Flöry <simon.floery@rechenraum.com>
	* fixed left shift / right shift in formula entry mode (thanks to Thure 
		Dührsen for reporting, closes sf.net #81)
	* changed default background color
	* left / right shift returns integers only now by truncating (closes sf.net 
		#82)
		
2012-12-26 Simon Flöry <simon.floery@rechenraum.com>
	* add Turkish translation (thanks to Oğuz Yarımtepe and all others for
		contributing, fixes sf.net #86)

##############################################
# 2012-10-15 galculator 2.0.1 released       #
##############################################

2012-12-15 Simon Flöry <simon.floery@rechenraum.com>
	* added missing GUI element in preferences dialog (migrated GtkOptionMenu
		to GtkComboBox in Numbers tab)
	* fixed integer parsing rule in flex parser (thanks to John Williams, fixes
		sf.net #74)
	* working around bug with window resizing, I assume this was GTK's fault
		(general_functions.c, set_window_size_minimal)
	* removed deprecated calls to set color on color buttons
	* fixed decimal separator on keypad (thanks to cyberpatrol and qwertypoke,
		fixes sf.net #86)
	* config file stored according to XDG spec (thanks to Eric Heintzmann, fixes
		sf.net #88)

2012-11-08 Simon Flöry <simon.floery@rechenraum.com>
	* applied patch to update spec file for RPM (thanks to Dwigth Engen)

##############################################
# 2009-10-15 galculator 2.0 released         #
##############################################

2012-10-13 Simon Flöry <simon.floery@rechenraum.com>
	* fixed bug in display_result_backspace in display.c (thanks to tjbp)
	* moved call to remember_display_values from ui_classic_view_create
		to main, to restore remember display value functionality
	* Improved pasting of numbers in scientific notation (e.g. 1e-4, 